fixed max-width for watermarks in 1d thumbs to prevent rediculously long titles overflowing

--- a/app/sass/thumb_1d.sass
+++ b/app/sass/thumb_1d.sass
@@ -257,6 +257,7 @@
             top: 30px
             left: 8px
             font-weight: normal
+            max-width: 344px
 
           p.text
             +absolute
